--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,3 @@
 steps:
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
-timeout: "1600s"
-
+- name: gcr.io/cloud-builders/git
+  args: ['push', 'https://source.developers.google.com/p/wave15-dhauptman/r/hello-world', 'master']
