--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
 - name: gcr.io/cloud-builders/git
-  args: ['push', 'https://source.developers.google.com/p/wave15-dhauptman/r/hello-world', 'master']
+  args: ['push', 'https://github.com/diegohauptman/hello-world.git', 'master']
